--- a/index.html
+++ b/index.html
@@ -410,17 +410,18 @@
 
 </footer>
 
-<dialog aria-labelledby="privacy-notes" id="dialog">
+<dialog class="container" aria-labelledby="privacy-notes" id="dialog">
 
-    <h2 id="data-usage" class="big-subtitle big-subtitle-margin">Uso de datos</h2>
+    <h2 id="data-usage" class="big-subtitle">Uso de datos</h2>
 
-    <ul aria-label="Lista de uso de datos" class="container list basic-paragraph">
+    <ul aria-label="Lista de uso de datos" class="list basic-paragraph">
         <li aria-label="Caso uno" class="item-list">Solamente se almacenan datos relativos al esquema de color seleccionado por la persona usuaria.</li>
         <li aria-label="Caso dos" class="item-list">No se almacena información personal ni se rastrea la actividad de manera individualizada.</li>
         <li aria-label="Caso tres" class="item-list">Esta web no utiliza cookies.</li>
     </ul>
 
     <button class="nav-button align-right" id="closeDialog" autofocus><span class="icon" aria-hidden="true">✕&nbsp;</span>Cerrar</button>
+    
 </dialog>
 
 </body>
