--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <li aria-label="Caso tres" class="item-list">Esta web no utiliza cookies.</li>
     </ul>
 
-    <button class="nav-button align-right" id="closeDialog" autofocus><span class="icon" aria-hidden="true">✕&nbsp;</span>Cerrar</button>
+    <button class="nav-button align-right basic-paragraph" id="closeDialog" autofocus><span class="icon" aria-hidden="true">✕&nbsp;</span>Cerrar</button>
     
 </dialog>
 
