--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <article aria-label="Resumen sobre mi y competencias básicas" class="container">
 
-            <h3 id="about" class="basic-subtitle basic-subtitle-margin">Sobre mi</h3>
-            <p class="basic-paragraph basic-paragraph-margin">Mi objetivo es crear soluciones que contribuyan a mejorar el entorno que nos rodea, tratar de hacer más cómoda la vida de las personas y disfrutar mucho durante el proceso.</p>
-            <p class="basic-paragraph basic-paragraph-margin">Actualmente llevo más de 2 años trabajando como diseñador de producto en Genially aunque durante los últimos 9 años me he enfrentado a proyectos de diseño de IU, de Sistema de diseño, Animación, Diseño Web y Diseño gráfico. Además durante 5 de estos años he trabajado en proyectos audiovisuales como técnico audiovisual, director de fotografía y operador de cámara.</p>
+            <h3 id="about" class="basic-subtitle basic-subtitle-margin" data-key="aboutMe.title"></h3>
+            <p class="basic-paragraph basic-paragraph-margin" data-key="aboutMe.paragraph.intro"></p>
+            <p class="basic-paragraph basic-paragraph-margin" data-key="aboutMe.paragraph.experience"></p>
 
-            <h3 class="basic-subtitle basic-subtitle-margin">Competencias básicas</h3>
+            <h3 class="basic-subtitle basic-subtitle-margin" data-key="coreSkills.title"></h3>
             <ul class="tag-group basic-paragraph">
                 <li class="tag">Experiencia de usuario</li>
                 <li class="tag">Interfaz de usuario</li>
