--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
             <p id="privacy-notes" aria-label="Notas sobre transparencia en el uso de datos."><button class="link" id="openDialog" title="Abrir ventana">Ver nota<span class="icon" aria-hidden="true">&nbsp;▢</span></button> sobre transparencia en el uso de datos.</p>
         </li>
 
+        <li class="info-list-item" aria-labelledby="change-lang">
+            <p id="change-lang" aria-label="Cambiar el idioma de la web" data-key="lang.paragraph"></p><a class="link" id="toggle-lang" title="Cambiar idioma" href="#home" data-key="lang.button"></a>
+        </li>
+
     </ul>
 
 </footer>
