--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 
 <main aria-labelledby="introduction" class="container">
 
-    <!--About me-->
-    <section aria-labelledby="about" class="container">
+     <!--About me-->
+     <section aria-labelledby="about" class="container">
 
-        <h2 id="introduction" class="big-title big-title-margin" data-key="section.about.header"></h2>
+        <h2 id="introduction" class="big-title big-title-margin" data-key="about.header"></h2>
 
         <article aria-label="Resumen sobre mi y competencias básicas" class="container">
 
-            <h3 id="about" class="basic-subtitle basic-subtitle-margin" data-key="section.about.title"></h3>
-            <p class="basic-paragraph basic-paragraph-margin" data-key="section.about.paragraph.intro"></p>
-            <p class="basic-paragraph basic-paragraph-margin" data-key="section.about.paragraph.experience"></p>
+            <h3 id="about" class="basic-subtitle basic-subtitle-margin"  data-key="about.subheader"></h3>
+            <p class="basic-paragraph basic-paragraph-margin" data-key="about.intro"></p>
+            <p class="basic-paragraph basic-paragraph-margin" data-key="about.description"></p>
 
-            <h3 class="basic-subtitle basic-subtitle-margin" data-key="coreSkills.title"></h3>
+            <h3 class="basic-subtitle basic-subtitle-margin" data-key="subheader.skills"></h3>
             <ul class="tag-group basic-paragraph">
-                <li class="tag" data-key="coreSkills.ux"></li>
-                <li class="tag" data-key="coreSkills.ui"></li>
-                <li class="tag" data-key="coreSkills.animation"></li>
-                <li class="tag" data-key="coreSkills.ixd"></li>
-                <li class="tag" data-key="coreSkills.ia"></li>
-                <li class="tag" data-key="coreSkills.research"></li>
+                <li class="tag" data-key="skills.userExperience"></li>
+                <li class="tag" data-key="skills.userInterface"></li>
+                <li class="tag" data-key="skills.animation"></li>
+                <li class="tag" data-key="skills.interactionDesign"></li>
+                <li class="tag" data-key="skills.informationArchitecture"></li>
+                <li class="tag" data-key="skills.userResearch"></li>
             </ul>
 
         </article>
@@ -72,47 +72,47 @@
     <!--Experience-->
     <section aria-labelledby="experience" class="container">
 
-        <h2 id="experience" class="basic-title basic-title-margin text-ellipsis" data-key="section.experience.title"></h2>
+        <h2 id="experience" class="basic-title basic-title-margin text-ellipsis" data-key="experience.header"></h2>
 
-            <h3 class="big-subtitle big-subtitle-margin content-secondary" data-key="section.experience.subtitle.current"></h3>
+            <h3 class="big-subtitle big-subtitle-margin content-secondary" data-key="experience.subheader.current"></h3>
 
             <article aria-labelledby="role01" class="container highlighted">
 
-                <h4 id="role01" class="small-title small-title-margin">Diseñador de producto en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icon" aria-hidden="true"> ↗</span></a></h4>
-                <p class="basic-paragraph basic-paragraph-margin"><i>Enero 2022 - Actualidad (Remoto)</i></p>
+                <h4 id="role01" class="small-title small-title-margin" data-key="experience.current.position"></h4>
+                <p class="basic-paragraph basic-paragraph-margin" data-key="experience.current.dates"></p>
 
-                <h5 class="basic-subtitle basic-subtitle-margin content-secondary">Descripción</h5>
-                <p class="basic-paragraph basic-paragraph-margin content-secondary">Enfocado en facilitar la creación de experiencias comunicativas diferenciadoras en el ámbito formativo, académico y profesional, a través del uso de efectos, interactividad y animación, planteando soluciones para la experiencia e interfaz de usuario llevando a cabo un proceso de diseño completo, involucrándome desde la detección de oportunidades hasta la evaluación de las soluciones tras la implementación.</p>
+                <h5 class="basic-subtitle basic-subtitle-margin content-secondary" data-key="subheader.description"></h5>
+                <p class="basic-paragraph basic-paragraph-margin content-secondary" data-key="experience.current.description"></p>
 
-                <h5 class="basic-subtitle basic-subtitle-margin content-secondary">Competencias básicas</h5>
+                <h5 class="basic-subtitle basic-subtitle-margin content-secondary" data-key="subheader.skills"></h5>
                 <ul class="tag-group basic-paragraph">
-                    <li class="tag">Experiencia de usuario</li>
-                    <li class="tag">Interfaz de usuario</li>
-                    <li class="tag">Diseño de interacción</li>
-                    <li class="tag">Flujos de usuario</li>
-                    <li class="tag">Esquematización de ideas</li>
-                    <li class="tag">Arquitectura de la información</li>
-                    <li class="tag">Investigación de usuario</li>
+                    <li class="tag" data-key="skills.userExperience"></li>
+                    <li class="tag" data-key="skills.userInterface"></li>
+                    <li class="tag" data-key="skills.interactionDesign"></li>
+                    <li class="tag" data-key="skills.userFlows"></li>
+                    <li class="tag" data-key="skills.wireframing"></li>
+                    <li class="tag" data-key="skills.informationArchitecture"></li>
+                    <li class="tag" data-key="skills.userResearch"></li>
                 </ul>
 
             </article>
 
-            <h3 class="big-subtitle big-subtitle-margin content-secondary" data-key="section.experience.subtitle.previous"></h3>
+            <h3 class="big-subtitle big-subtitle-margin content-secondary" data-key="experience.subheader.previous"></h3>
 
             <article aria-labelledby="role02" class="container">
 
-                <h4 id="role02" class="small-title small-title-margin">Diseñador de IU & Sistema de diseño en <a class="link" href="https://genially.com/" target="_blank" rel="noopener noreferrer" title="Ir a la página web de Genially">Genially<span class="icon" aria-hidden="true"> ↗</span></a></h4>
-                <p class="basic-paragraph basic-paragraph-margin"><i>Julio 2020 - Enero 2022 (Remoto)</i></p>
+                <h4 id="role02" class="small-title small-title-margin" data-key="experience.previous.position"></h4>
+                <p class="basic-paragraph basic-paragraph-margin" data-key="experience.previous.dates"></p>
 
-                <h5 class="basic-subtitle basic-subtitle-margin content-secondary">Descripción</h5>
-                <p class="basic-paragraph basic-paragraph-margin content-secondary">Creando las bases del sistema de diseño, documentando, diseñando los componentes fundamentales y definiendo patrones básicos de diseño, buscando la máxima escalabilidad y con gran atención a la viabilidad de implementación dado que hasta el momento no existía sistema de diseño. Además durante esta etapa estuve participando en el diseño de la página web construyendo un sistema modular que permitiera al equipo de contenidos crear páginas a través de un content manager personalizado. También participé rediseñando diferentes partes de la IU de la aplicación.</p>
+                <h5 class="basic-subtitle basic-subtitle-margin content-secondary" data-key="subheader.description"></h5>
+                <p class="basic-paragraph basic-paragraph-margin content-secondary" data-key="experience.previous.description"></p>
 
-                <h5 class="basic-subtitle basic-subtitle-margin content-secondary">Competencias básicas</h5>
+                <h5 class="basic-subtitle basic-subtitle-margin content-secondary" data-key="subheader.skills"></h5>
                 <ul class="tag-group basic-paragraph">
-                    <li class="tag">Diseño de interacción</li>
-                    <li class="tag">Interfaz de usuario</li>
-                    <li class="tag">Sistema de diseño</li>
-                    <li class="tag">Animación</li>
+                    <li class="tag" data-key="skills.interactionDesign"></li>
+                    <li class="tag" data-key="skills.userInterface"></li>
+                    <li class="tag" data-key="skills.designSystem"></li>
+                    <li class="tag" data-key="skills.animation"></li>
                 </ul>
 
             </article>
@@ -185,7 +185,7 @@
     <!--Volunteer-->
     <section aria-labelledby="volunteer" class="container">
 
-        <h2 id="volunteer" class="basic-title basic-title-margin text-ellipsis" data-key="section.volunteer.title"></h2>
+        <h2 id="volunteer" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">&#128080; </span>Voluntariado</h2>
 
             <h3 class="big-subtitle big-subtitle-margin content-secondary">Colaboración en curso</h3>
 
@@ -230,7 +230,7 @@
     <!--Education-->
     <section aria-labelledby="education" class="container">
 
-        <h2 id="education" class="basic-title basic-title-margin" data-key="section.education.title"></h2>
+        <h2 id="education" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">&#128214; </span>Educación y Cursos formativos</h2>
 
             <h3 class="big-subtitle big-subtitle-margin content-secondary">Formación en progreso</h3>
 
@@ -329,7 +329,7 @@
     <!--Acknowledgements-->
     <section aria-labelledby="acknowledgements" class="container">
 
-        <h2 id="acknowledgements" class="basic-title basic-title-margin text-ellipsis" data-key="section.acknowledgements.title"></h2>
+        <h2 id="acknowledgements" class="basic-title basic-title-margin text-ellipsis"><span class="emoji" aria-hidden="true">&#127881; </span>Premios</h2>
 
         <article aria-labelledby="award01" class="container highlighted">
 
@@ -344,7 +344,7 @@
     <!--Contact-->
     <section aria-labelledby="info" class="container">
 
-        <h2 id="info" class="basic-title basic-title-margin" data-key="section.contact.title"></h2>
+        <h2 id="info" class="basic-title basic-title-margin"><span class="emoji" aria-hidden="true">&#129309; </span>¿Hablamos?</h2>
 
         <article aria-label="Datos de contacto" class="container"> 
 
