--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body id="home">
 
 <!--Header-->
+
+
 <div id="themeContainer" aria-label="" class="container" data-key="">
     <label tabindex="0" title="" class="align-right theme-switch" for="checkbox" data-key="header.switch.label">
         <input id="checkbox" type="checkbox" id="checkbox" for="checkbox" />
@@ -26,12 +28,6 @@
 </div>
 
 <header aria-labelledby="header" class="container">
-
-    <div aria-label="" class="lang-selector" data-key="lang.container">
-        <button title="" id="es-button" class="lang-button" data-key="lang.es"></button>
-        <button title="" id="en-button" class="lang-button" data-key="lang.en"></button>
-    </div>
-
     <h1 id="header" class="small-title small-title-margin regular-weight content-secondary" data-key="header.title"></h1>
 
 </header>
@@ -411,6 +407,11 @@
         <li id="privacy-notes" aria-labelledby="privacy-notes" class="info-list-item">
             <button class='link' id='openDialog' title=''data-key="footer.dataUsage.button"></button><p data-key="footer.dataUsage.content"></p>
         </li>
+
+        <div id="lang-selector" aria-label="" class="lang-selector align-center" data-key="lang.container">
+            <a title="" id="es-button" class="lang-button" data-key="lang.es" href="#home"></a>
+            <a title="" id="en-button" class="lang-button" data-key="lang.en" href="#home"></a>
+        </div>
 
     </ul>
 
