--- a/index.html
+++ b/index.html
@@ -19,13 +19,32 @@
 
 <!--Header-->
 
+<div class="header">
 
-<div id="themeContainer" aria-label="" class="container" data-key="">
-    <label tabindex="0" title="" class="align-right theme-switch" for="checkbox" data-key="header.switch.label">
-        <input id="checkbox" type="checkbox" id="checkbox" for="checkbox" />
-        <div class="slider round"></div>
-  </label>
+    <div id="themeContainer" aria-label="" data-key="">
+        <label tabindex="0" title="" class="theme-switch" for="checkbox" data-key="header.switch.label">
+            <input id="checkbox" type="checkbox" id="checkbox" for="checkbox" />
+            <div class="slider round"></div>
+      </label>
+    </div>
+
+    <div id="lang-selector" aria-label="" class="lang-selector" data-key="lang.container">
+        <button id="languageButton" aria-haspopup="true" aria-expanded="false" class="lang-button" data-key="lang.es">
+        </button>
+    
+        <ul aria-label="" id="languageList" class="list basic-paragraph lang-list" role="menu" aria-labelledby="languageButton" hidden>
+            <li role="none">
+                <button title="" id="languageButtonEs" class="lang-button" data-key="lang.es"></button>
+            </li>
+            <li role="none">
+                <button title="" id="languageButtonEn" class="lang-button" data-key="lang.en"></button>
+            </li>
+        </ul>
+    </div>    
+
 </div>
+
+
 
 <header aria-labelledby="header" class="container">
     <h1 id="header" class="small-title small-title-margin regular-weight content-secondary" data-key="header.title"></h1>
@@ -408,16 +427,11 @@
             <button class='link' id='openDialog' title=''data-key="footer.dataUsage.button"></button><p data-key="footer.dataUsage.content"></p>
         </li>
 
-        <div id="lang-selector" aria-label="" class="lang-selector align-center" data-key="lang.container">
-            <a title="" id="es-button" class="lang-button" data-key="lang.es" href="#home"></a>
-            <a title="" id="en-button" class="lang-button" data-key="lang.en" href="#home"></a>
-        </div>
-
     </ul>
 
 </footer>
 
-<dialog class="container" aria-labelledby="privacy-notes" id="dialog">
+<dialog class="container data-dialog" aria-labelledby="privacy-notes" id="dialog">
 
     <h2 id="data-usage" class="big-subtitle" data-key="footer.dialog.header"></h2>
 
