--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div id="lang-selector" aria-label="" class="lang-selector" data-key="lang.container">
-        <button id="languageButton" aria-haspopup="true" aria-expanded="false" class="lang-button" data-key="lang.es">
+        <button id="languageButton" aria-haspopup="true" aria-expanded="false" class="lang-button" data-key="lang.selected">
         </button>
     
         <ul aria-label="" id="languageList" class="list basic-paragraph lang-list" role="menu" aria-labelledby="languageButton" hidden>
