--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 
 <body id="home">
 
+<div id="progressBar" class="container progressBar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-valuetext="0%" aria-label="" data-key="progressBar">
+    <div id="bar" class="bar"></div>
+</div>
+
 <!--Header-->
 
 <div class="topbar">
 
     <div id="themeContainer" aria-label="" data-key="">
         <label tabindex="0" title="" class="theme-switch" for="checkbox" data-key="header.switch.label">
-            <input id="checkbox" type="checkbox" id="checkbox" for="checkbox" />
+            <input id="checkbox" type="checkbox" id="checkbox" for="checkbox"/>
             <div class="slider round"></div>
       </label>
     </div>
