--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
                     <p aria-label="" data-key="contact.email.title"></p>
                     
-                    <a class="link" href="mailto:alvaromolrui@gmail.com" aria-label="" title="" data-key="contact.email.link"></a>
+                    <a class="link" href="mailto:hola@amolrui.com" aria-label="" title="" data-key="contact.email.link"></a>
                     
                     <button class="copy-button" aria-label="" title="" data-key="contact.button.default"></button>
 
